--- a/index.html
+++ b/index.html
@@ -7,9 +7,30 @@
     <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
     <link rel="stylesheet" href="css/styles.css"  type="text/css">
 
-    <title></title>
+    <title>Groceries</title>
   </head>
   <body>
+    <div class="container">
+  <h1>Enter your grocery list below (you only get 3 things.  Sorry.)</h1>
+  <div>
+    <form id="formOne">
+      <div class="form-group">
+        <label for="yourGroceries1">Grocery</label>
+        <input id="yourGroceries1" class="form-control" type="text">
+        <label for="yourGroceries2">Grocery</label>
+        <input id="yourGroceries2" class="form-control" type="text">
+        <label for="yourGroceries3">Grocery</label>
+        <input id="yourGroceries3" class="form-control" type="text">
 
+        <button id="submit" class="btn " type="submit">Submit</button>
+      </div>
+      <div class="result">
+        <ul id="result-list">
+
+        </ul>
+      </div>
+    </form>
+  </div>
+</div>
   </body>
 </html>
